MongoDB connection Success

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=3001
 GEMMA_API_URL=https://bug-free-space-spork-j9qpg6r5qg2p65q-11434.app.github.dev/api/generate
 GEMMA_API_URL_LOCAL=http://localhost:11434/api/generate
+MONGO_URI=mongodb+srv://seonnate:nateseon@cluster0.z7zhb.mongodb.net/postboard_db?retryWrites=true&w=majority
