--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
+    "prestart": "node generateEnv.js",
   "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
   "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
   "test": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts test",
