--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
+# REACT_APP_API_URL=http://localhost:3001/api/posts
 REACT_APP_API_URL=https://special-fortnight-4jq9v4vj94wpf76gp-3001.app.github.dev/api/posts
