--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=http://localhost:3001/api/posts
-REACT_APP_GEMMA_API_URL=http://localhost:3001/api/chat
-REACT_APP_IMAGE_UPLOAD_URL=http://localhost:3001/api/upload
+REACT_APP_API_URL=https://bug-free-space-spork-j9qpg6r5qg2p65q-3001.app.github.dev/api/posts
+REACT_APP_GEMMA_API_URL=https://bug-free-space-spork-j9qpg6r5qg2p65q-3001.app.github.dev/api/chat
+REACT_APP_IMAGE_UPLOAD_URL=https://bug-free-space-spork-j9qpg6r5qg2p65q-3001.app.github.dev/api/upload
